<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="br.com.acheiclassificados.achei_classificados.Login_Activity">

    <!-- Feito - Cacau -->
    <TextView
    android:text="@string/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <!-- Campo de texto para digitar o login -->
    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>

    <TextView
        android:text="@string/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Campo de texto para digitar a senha -->
    <EditText
        android:id="@+id/senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"/>

    <!-- Botão para logar -->
    <Button
        android:id="@+id/btn_entrar"
        android:text="@string/entrar"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="#00C4FF"
        android:textColor="#ffffff"
        android:elevation="6dp"
        android:stateListAnimator="@null"/>


</LinearLayout>
