<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="br.com.acheiclassificados.achei_classificados.Cadastro_ProfissionalActivity">

    <!-- Feito - Victor (Modificado - Cacau) -->
    <TextView
        android:text="@string/nome_cadastro_profissional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Campo para digitar o nome do profissional -->
    <EditText
        android:id="@+id/edit_Nome_Cadastro_Profissional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"/>

    <TextView
        android:text="@string/telefone_cadastro_profissional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Campo para digitar o telefone do profissional -->
    <EditText
        android:id="@+id/edit_Telefone_Cadastro_Profissional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"/>

    <TextView
        android:text="@string/endereco_profissional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Campo para digitar o endereço do profissional -->
    <EditText
        android:id="@+id/edit_Endereco_Cadastro_Profissional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"/>

    <TextView
        android:text="@string/email_cadastro_profissional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Campo para digitar o email do profissional -->
    <EditText
        android:id="@+id/edit_Email_Cadastro_Profissional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>

    <!-- Botão para cadastrar profissional -->
    <Button
        android:id="@+id/btn_Cadastro_Profissional"
        android:text="Cadastrar"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="#00C4FF"
        android:textColor="#ffffff"
        android:elevation="6dp"
        android:stateListAnimator="@null"/>

</LinearLayout>
